--- a/src/Switcher.css
+++ b/src/Switcher.css
@@ -7,10 +7,17 @@
 
 .component-list__name {
   margin-right: 10px;
-  text-decoration: underline;
   cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 20px;
 }
-
+.component-list__name:hover {
+  background-color: #eee;
+}
+.component-list__name.is-active {
+  background-color: #333;
+  color: white;
+}
 .component-wrapper {
   padding: 20px 40px;
 }
